--- a/webroot/css/cat-index.scss
+++ b/webroot/css/cat-index.scss
@@ -5,12 +5,21 @@
     &__wrapper {
         width: 400px;
         height: 350px;
-        margin: 0 auto
+        margin: 0 auto;
+
+        @media (max-width: 768px) {
+            width: 350px;
+            height: 300px;
+        }
     }
 
     &__image {
         border: 1px solid black;
         border-radius: 5px 5px 0 0;
+        transition: opacity 0.2s ease-in-out;
+        &:hover {
+            opacity: 80%;
+        }
 
         &__footer {
             padding: 5px 10px 15px 10px;
@@ -29,30 +38,6 @@
             &__button-a a:hover {
                 background-color: #ff4750;
             }
-
-/*            &__delete-button a {
-                border-radius: 4px;
-                text-decoration: none;
-                color: #F6FDFF;
-                background-color: #8f272b;
-                padding: 5px;
-            }
-
-            &__delete-button a:hover {
-                background-color: #ff4750;
-            }
-
-            &__edit-button a {
-                border-radius: 4px;
-                text-decoration: none;
-                color: #F6FDFF;
-                background-color: #8f272b;
-                padding: 5px;
-            }
-
-            &__edit-button a:hover {
-                background-color: #088800;
-            }*/
         }
     }
 }
