--- a/webroot/css/cat-index.scss
+++ b/webroot/css/cat-index.scss
@@ -2,6 +2,18 @@
     margin-top: 65px;
     margin-bottom: 65px;
 
+    &__order-checkbox {
+        position: relative;
+        top: 25%;
+        width: 20px;
+        height: 20px;
+
+        &:checked {
+            background-color: #C93941;
+            border: none;
+        }
+    }
+
     &__wrapper {
         width: 400px;
         height: 350px;
