--- a/webroot/css/cats-view.scss
+++ b/webroot/css/cats-view.scss
@@ -1,10 +1,24 @@
 .cats-view {
+    background-color: #C93941;
     &__function-name {
         font-size: 60px;
         word-break: break-word;
         overflow-wrap: break-word;
+        color: white;
     }
     &__function-description {
         font-size: 20px;
+        color: white;
+    }
+
+    &__function-examples{
+        font-size: 20px;
+        background-color: wheat;
+        border-radius: 3px;
+        white-space: pre-wrap; // VERY, important, so that we keep the white spaces.
+    }
+
+    &__image {
+        min-width: 350px;
     }
 }
