--- a/webroot/css/cats-view.scss
+++ b/webroot/css/cats-view.scss
@@ -4,7 +4,7 @@
         font-size: 60px;
         word-break: break-word;
         overflow-wrap: break-word;
-        color: white;
+        background-color: wheat;
     }
     &__function-description {
         font-size: 20px;
