--- a/webroot/css/styles.css
+++ b/webroot/css/styles.css
@@ -7,6 +7,7 @@
 @import "cats-edit.css";
 @import "cats-add.css";
 @import "cats-deleted.css";
+@import "cats-help.css";
 
 * {
     font-family: "JetBrains Mono", sans-serif !important;
